<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edittextshape"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/foodnotify"
        android:textColor="@color/greencolor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver"
        android:textColor="@color/greencolor"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginaccount"
        android:textColor="@color/greencolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="325dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="or"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Continue with"
        android:textColor="@color/greencolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/whitebutton"
        android:drawableLeft="@drawable/google"
        android:paddingLeft="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/whitebutton"
        android:drawableLeft="@drawable/facebook"
        android:paddingLeft="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbutton"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbutton"
        android:text="LOGIN"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/donthaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Don't Have Account?"
        android:textColor="@color/greencolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/design"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        android:textColor="@color/greencolor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donthaveaccount" />


</androidx.constraintlayout.widget.ConstraintLayout>