<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/foodnotify"
        android:textColor="@color/greencolor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deliver"
        android:textColor="@color/greencolor"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Sign Up Here"
        android:textColor="@color/greencolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/user_plus"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/lock"
        android:drawablePadding="15dp"
        android:elevation="5dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google"
        android:paddingStart="15dp"
        android:text="@string/google"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook"
        android:paddingStart="15dp"
        android:text="@string/facebook"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAccount"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/greenbutton"
        android:text="Create Account"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/alreadyhaveaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Already Have Account!"
        android:textColor="@color/greencolor"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="or"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Sign Up With"
        android:textColor="@color/greencolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>